Make the build the first increment and settle the build decisions
Increment 1 is the build alone: modules, Java 21 target, the Eclipse
formatter through Spotless with a three-setting profile, NullAway as the
only Error Prone check, the sbe-tool reference submodule, and CI. The
example and its oracle move to increment 2; dependencies arrive with the
increment that needs them. javac lint flags are dropped. A scoped rule
covers the reference checkout; the Java style rule asks for annotated
record components one per line.